<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.example.inz.viewmodels.WorkoutViewModel" />
        <variable
            name="view"
            type="com.example.inz.views.fragments.WorkoutFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/material_dynamic_neutral10">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:id="@+id/detailsWorkoutName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@{viewModel.workoutName}"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnFinishWorkout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Finish"
                android:onClick="@{() -> view.finishWorkout()}"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Duration"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Volume"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Sets"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/timerTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@{viewModel.timerText}"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/volumeTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@{viewModel.volumeText}"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/setsTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@{viewModel.setsText}"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

        <Button
            android:id="@+id/btnRest"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ellipsize="none"
            android:gravity="center"
            android:maxLines="2"
            android:padding="16dp"
            android:singleLine="false"
            android:text="@{viewModel.restButtonText}"
            android:onClick="@{() -> view.startRest()}"/>

        <ScrollView
            android:id="@+id/exercisesScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/appbar_scrolling_view_behavior"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:id="@+id/exerciseContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="10dp"
                android:paddingLeft="10dp">

                <Button
                    android:id="@+id/btnAddExercise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/add_exercise"
                    android:onClick="@{() -> view.showExerciseListFragment()}"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>