<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="setRecord"
            type="com.example.inz.models.SetRecord" />
    </data>
<FrameLayout
    android:id="@+id/setContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <LinearLayout
        android:id="@+id/setComponent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/material_dynamic_neutral_variant10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/setNumberTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@{String.valueOf(setRecord.number)}"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/weightInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:text="@={setRecord.weight}"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/repsInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="numberSigned"
            android:text="@={setRecord.reps}"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </LinearLayout>
    <Button
        android:id="@+id/deleteSetButton"
        android:layout_width="58dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:text="✕"
        android:textColor="#FF0000"
        android:visibility="gone"
        />
</FrameLayout>
</layout>