<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/home"
        android:title="Home" />
    <item
        android:id="@+id/workout"
        android:icon="@drawable/workout"
        android:title="Workout" />
    <item
        android:id="@+id/history"
        android:icon="@drawable/history"
        android:title="History" />
</menu>
